--- a/TODO
+++ b/TODO
@@ -1,11 +1,13 @@
 TODO
 
+ * README DRIVEN DEVELOPMENT!
  * HTTP-specific tests + documentation (copy from riak.js)
  * Incorporate ideas from http://github.com/jamesaduncan/riak-js
  * Add "inputs" step in Map/Reduce building - and just run(callback)
- * Deal with vclocks, exposing and solving conflicts
+ * Support new quorums: "Riak 0.12 also allows you to specify “symbolic” quorums, that is, “all” (N replies), “quorum” (N/2 + 1 replies), or “one” (1 reply)."
+ * Deal with vclocks, exposing and solving conflicts (allow_mult, http://bitbucket.org/basho/wriaki) -- stable and meaningful (bound to env) clientId
  * Update in node wiki
  * Resilent to crashes, network errors, etc; auto-reconnect to several hosts
- * Provide an accurate clientId, bound to environment? - randomizing it on client init is a bad solution
+ * Mapper (separate project) - see visionmedia/rapid, LearnBoost/mongoose, http://seancribbs.com/tech/2010/08/31/ripple-0-8-is-full-of-good-stuff/
  * Test with vows / merge airline tests and introduce fake passengers with faker
  * Make jQuery version work and fix #6
