--- a/README
+++ b/README
@@ -1,25 +1,96 @@
-riak-js 1.0
+# riak-js
 
- - javascript so that more people can contribute, and better debug in production
- - make it generic, but no support for protobuf -- patches accepted
- - should be suitable for client side impl (pure js)
- - accept streams whenever possible (for logging, map/reduce, luwak, key listing)
- - key listing should *always* stream, client will do buffering
- - test everything: seq + assert; use test backend
- - drop riakjs.org, put docs in README
- - align codebase documentation (see format used in connect-riak)
- - new BSD license
- - hooks: onpresave('users')
- - conflict resolution strategies (see java client)
- 
-META
+[Node.js](http://nodejs.org/) client for [Riak](http://riak.basho.com).
 
- - simplified
- - has shortcuts (contentType, links, r, etc)
- - the non-recognized ones will simply be ignored
- - extra http headers can be passed in via `headers` (for instance custom usermeta, `X-Riak-Meta-*`). these *will* override whatever has been set elsewhere
+### Installation
 
-LICENSE
+    npm install riak-js
+
+### Features and documentation
+
+[Documentation](http://frank06.github.com/riak-js) [soon]
+
+Follow updates on Twitter: [@riakjs](http://twitter.com/riakjs)
+
+### Changelog
+
+#### 1.0.0
+
+ - Complete rewrite in Javascript (two reasons: better debugging in production deployments, and more people can contribute)
+ - Better documented code
+ - Support Riak 1.0 features
+ - First class support for streams (Luwak, key listing, Map/Reduce, logging)
+ - Faster testing with node-seq + assert, test backend integration
+ - Extra HTTP headers can now be passed in via `headers` (for instance custom usermeta, `X-Riak-Meta-*`) - these *will* override whatever has been set elsewhere
+ - `addSearch` is now `search`
+ - Conflict resolution strategies [soon]
+ - The project is open for other implementations
+ - Removed Protocol Buffers support – contributions welcome (extend `Client` in a file called `protobuf-client.js` along with a `protobuf-meta.js`)
+ - A client-side impl is also possible (look at https://github.com/ded/reqwest)
+
+#### 0.4.1
+
+ - Add search params [gpascale]
+ - SSL client [isaacs]
+ - Last-modified date patch [siculars]
+ - Add `meta.noError404` so that you can prevent 404s from showing up as errors [syrio]
+ - Deprecation warnings
+
+#### 0.4.0
+
+ - `db.update`: convenience method for updating documents
+ - Changed debug behaviour: always log to stdout. Not providing a callback **will** output to `console.log` regardless of the setting
+
+#### 0.4.0rc3
+
+ - Allow headers to override, useful for reverse proxies sitting between node and Riak
+ - URI-encoding bucket/key is now an option (encodeUri)
+ - Add documentation for map/reduce arguments
+ - Remove agent from meta, which should fix critical bug (#64, #67)
+ - Allow logging to alternate streams. And default to stderr, not stdout (thanks Mark!)
+ - Add docs for host/port (thanks Ken!)
+ - Add the new `presort` property for Riak Search (thanks Greg!)
+
+#### 0.4.0rc2
+
+ - Major docs update => [http://riakjs.org](http://riakjs.org)
+ - `keys=stream` emits `keys` events
+ - `walk` now accepts `noJSON`
+ - Support Map/Reduce timeout option
+ - Protobuf interface refactor (still experimental support in 0.4)
+ - Minor bug fixes
+
+#### 0.4.0rc1
+
+ - node 0.4.x compatibility
+ - npm 1.0 compatibility
+ - Minor bug fixes
+
+#### 0.3.6
+
+ - Fix index.js and package.json for npm compat
+ - Fix recursing usermeta
+ - Fix for luwak location parsing
+ - Updates related to Riak Search operations
+
+#### 0.3.0beta6
+
+ - Test backend implementation
+ - Connect session store
+ - Protobuf parsing is now more robust
+ - Replace client every time ECONNREFUSED occurs
+ - Initial Riak Search support
+ - Minor bugfixing and internals refactoring
+
+#### 0.3.0beta5
+
+ - Add support for bucket listing in HTTP (new Riak 0.14 feature)
+ - Updated to CoffeeScript 1.0.0
+ - Fixed a memory leak caused by adding too many Event Listeners
+ - If there's no `vclock` present in a Meta, do not send any `clientId`
+
+
+### License
 
 Simplified BSD License
 
